// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroesContainer handleHeroClick renders the Modal with HeroDetails 1`] = `
<Fragment>
  <Modal
    onClose={[Function]}
    title="3-D Man"
  >
    <HeroDetails
      hero={
        Object {
          "description": "",
          "id": 1011334,
          "modified": "2014-04-29T14:18:17-0400",
          "name": "3-D Man",
          "thumbnail": Object {
            "extension": "jpg",
            "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
          },
        }
      }
      imageUrl="getImageUrl result"
    />
  </Modal>
  <MainLayout
    info={
      <Information
        attribution={undefined}
      />
    }
    list={
      <HeroList
        getThumbnailUrl={[Function]}
        heroes={
          Array [
            Object {
              "description": "",
              "id": 1011334,
              "modified": "2014-04-29T14:18:17-0400",
              "name": "3-D Man",
              "thumbnail": Object {
                "extension": "jpg",
                "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
              },
            },
            Object {
              "description": "Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! ",
              "id": 1017100,
              "modified": "2013-09-18T15:54:04-0400",
              "name": "A-Bomb (HAS)",
              "thumbnail": Object {
                "extension": "jpg",
                "path": "http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16",
              },
            },
          ]
        }
        onHeroClick={[Function]}
      />
    }
    pagination={
      <PaginationContainer
        count={444}
        goToPage={[Function]}
        limit={222}
        offset={111}
        total={333}
      />
    }
    search={
      <SearchContainer
        lastSearch=""
        onSearchChanged={[Function]}
      />
    }
  />
</Fragment>
`;

exports[`HeroesContainer render renders a loading message 1`] = `<LoadingIndicator />`;

exports[`HeroesContainer render renders an error message 1`] = `
<ErrorMessage
  message="Error loading heroes"
/>
`;

exports[`HeroesContainer render renders heroes 1`] = `
<Fragment>
  <MainLayout
    info={
      <Information
        attribution={undefined}
      />
    }
    list={
      <HeroList
        getThumbnailUrl={[Function]}
        heroes={
          Array [
            Object {
              "description": "",
              "id": 1011334,
              "modified": "2014-04-29T14:18:17-0400",
              "name": "3-D Man",
              "thumbnail": Object {
                "extension": "jpg",
                "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
              },
            },
            Object {
              "description": "Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! ",
              "id": 1017100,
              "modified": "2013-09-18T15:54:04-0400",
              "name": "A-Bomb (HAS)",
              "thumbnail": Object {
                "extension": "jpg",
                "path": "http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16",
              },
            },
          ]
        }
        onHeroClick={[Function]}
      />
    }
    pagination={
      <PaginationContainer
        count={444}
        goToPage={[Function]}
        limit={222}
        offset={111}
        total={333}
      />
    }
    search={
      <SearchContainer
        lastSearch=""
        onSearchChanged={[Function]}
      />
    }
  />
</Fragment>
`;
